gcc/testsuite/g++.dg/parse/friend6.C
// PR c++/27808

template<typename T> friend void T::foo; // { dg-error "friend|invalid" }
